--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <h1>SpaceWalkers</h1>
     </div>
     <div class="links">
-      <a href="#">Home</a>
+      <a href="C:\Users\Michelle\Desktop\Lambda\Sprint-Challenge--Advanced-CSS\index.html">Home</a>
       <a href="#">About Us</a>
       <a href="#">Blog</a>
-      <a href="#">Contact</a>
+      <a href="C:\Users\Michelle\Desktop\Lambda\Sprint-Challenge--Advanced-CSS\contact.html">Contact</a>
       <a href="#">Sign In</a>
     </div>
   </nav>
