--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <title>SpaceWalkers</title>
 
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
-  <link href="css/contact.css" rel="stylesheet">
+  <link href="css/contactindex.css" rel="stylesheet">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -26,4 +26,7 @@
           <a href="#">Sign In</a>
         </div>
       </nav>
+      <footer>
+        <p>Copyright SpaceWalkers 2018</p>
+      </footer>
 </body>
