--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,24 @@
           <a href="C:\Users\Michelle\Desktop\Lambda\Sprint-Challenge--Advanced-CSS\contact.html">Contact</a>
           <a href="#">Sign In</a>
         </div>
-      </nav>
+    </nav>
+
+      <div class="container">
+          <header class="header">
+              <div class="banner">
+              <img class="bannerimg" src="img/contactbanner.jpg" alt="astronut">
+              </div>
+              <div class="intro">
+                  <h2>Contact Us</h2>
+              <p>We would love to hear from you!</p>
+              </div>
+          </header>
+
+
+      
+
       <footer>
         <p>Copyright SpaceWalkers 2018</p>
       </footer>
+    </div>
 </body>
